--- a/pom.xml
+++ b/pom.xml
@@ -275,6 +275,13 @@
       <version>1.8.0.1</version>
       <scope>test</scope>
     </dependency>
+	<dependency>
+		<groupId>com.h2database</groupId>
+		<artifactId>h2</artifactId>
+		<version>1.1.113</version>
+		<!-- Note that the 1.1.113 version is the last one officially built with JDK 1.4 -->
+		<scope>test</scope>
+	</dependency> 
     <dependency>
       <groupId>gsbase</groupId>
       <artifactId>gsbase</artifactId>
