[2875235] - Integration tests working with postgresql profile.

--- a/pom.xml
+++ b/pom.xml
@@ -304,7 +304,12 @@
       <version>2.0.1</version>
       <scope>test</scope>
     </dependency>
-
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>1.4</version>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-nop</artifactId>
