--- a/dbunit-maven-plugin/pom.xml
+++ b/dbunit-maven-plugin/pom.xml
@@ -105,7 +105,7 @@
     <dependency>
       <groupId>org.dbunit</groupId>
       <artifactId>dbunit</artifactId>
-      <version>2.4.5</version>
+      <version>2.4.7</version>
     </dependency>
     <!-- dbunit depends on slf4j -->
     <dependency>
@@ -135,6 +135,11 @@
       <artifactId>maven-settings</artifactId>
       <version>2.0</version>
     </dependency>
+    <dependency>
+      <groupId>commons-collections</groupId>
+      <artifactId>commons-collections</artifactId>
+      <version>3.2.1</version>
+    </dependency> 
   </dependencies>
     
   <build>
