[2215029] - Move dbunit-maven-plugin from codehaus to DBUnit - changed images/banners to the dbunit ones

--- a/dbunit-maven-plugin/pom.xml
+++ b/dbunit-maven-plugin/pom.xml
@@ -11,7 +11,7 @@
   <packaging>maven-plugin</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>DbUnit Maven Plugin</name>
-  <url>http://dbunit.sourceforge.net/</url>
+  <url>http://dbunit.sourceforge.net/dbunit-maven-plugin/</url>
   <inceptionYear>2006</inceptionYear>
   <description>
      Use this plugin to invoke DbUnit utilities
