--- a/dbunit/pom.xml
+++ b/dbunit/pom.xml
@@ -29,13 +29,39 @@
     <checkstyle.excludes>org/dbunit/util/concurrent/*.java</checkstyle.excludes>
 
     <!-- Maven plugin versions -->
+    <assemblyPluginVersion>2.3</assemblyPluginVersion>
+    <changelogPluginVersion>2.2</changelogPluginVersion>
+    <changesPluginVersion>2.8</changesPluginVersion>
+    <cleanPluginVersion>2.5</cleanPluginVersion>
+    <coberturaPluginVersion>2.5.2</coberturaPluginVersion>
+    <checkstylePluginVersion>2.9.1</checkstylePluginVersion>
+    <compilerPluginVersion>2.5.1</compilerPluginVersion>
+    <deployPluginVersion>2.7</deployPluginVersion>
     <enforcerPluginVersion>1.1.1</enforcerPluginVersion>
+    <failsafePluginVersion>2.12.4</failsafePluginVersion>
+    <gpgPluginVersion>1.4</gpgPluginVersion>
+    <installPluginVersion>2.4</installPluginVersion>
+    <jarPluginVersion>2.4</jarPluginVersion>
+    <javadocPluginVersion>2.9</javadocPluginVersion>
+    <jdependPluginVersion>2.0-beta-2</jdependPluginVersion>
+    <jxrPluginVersion>2.3</jxrPluginVersion>
+    <pmdPluginVersion>2.7.1</pmdPluginVersion>
+    <projectInfoReportsPluginVersion>2.5.1</projectInfoReportsPluginVersion>
+    <releasePluginVersion>2.3.2</releasePluginVersion>
+    <resourcesPluginVersion>2.6</resourcesPluginVersion>
+    <sqlPluginVersion>1.5</sqlPluginVersion>
+    <surefirePluginVersion>2.12.4</surefirePluginVersion>
+    <sitePluginVersion>3.2</sitePluginVersion>
 
     <!-- Framework versions --> 
     <logbackVersion>0.9.15</logbackVersion>
     <slf4jVersion>1.5.6</slf4jVersion>
     <wagonSshVersion>2.2</wagonSshVersion>
   </properties>
+
+  <prerequisites>
+    <maven>2.2.1</maven>
+  </prerequisites>
 
   <scm>
     <connection>scm:svn:https://dbunit.svn.sourceforge.net/svnroot/dbunit/trunk/dbunit</connection>
@@ -352,10 +378,135 @@
       <version>1.4</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>xerces</groupId>
+      <artifactId>xmlParserAPIs</artifactId>
+      <version>2.6.2</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
     <defaultGoal>install</defaultGoal>
+    <pluginManagement>
+      <plugins>
+       <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <version>${assemblyPluginVersion}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-changelog-plugin</artifactId>
+          <version>${changelogPluginVersion}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-changes-plugin</artifactId>
+          <version>${changesPluginVersion}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-checkstyle-plugin</artifactId>
+          <version>${checkstylePluginVersion}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-clean-plugin</artifactId>
+          <version>${cleanPluginVersion}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>cobertura-maven-plugin</artifactId>
+          <version>${coberturaPluginVersion}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>${compilerPluginVersion}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-deploy-plugin</artifactId>
+          <version>${deployPluginVersion}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-enforcer-plugin</artifactId>
+          <version>${enforcerPluginVersion}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>${failsafePluginVersion}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-gpg-plugin</artifactId>
+          <version>${gpgPluginVersion}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-install-plugin</artifactId>
+          <version>${installPluginVersion}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-jar-plugin</artifactId>
+          <version>${jarPluginVersion}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <version>${javadocPluginVersion}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>jdepend-maven-plugin</artifactId>
+          <version>${jdependPluginVersion}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-jxr-plugin</artifactId>
+          <version>${jxrPluginVersion}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-pmd-plugin</artifactId>
+          <version>${pmdPluginVersion}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-project-info-reports-plugin</artifactId>
+          <version>${projectInfoReportsPluginVersion}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-release-plugin</artifactId>
+          <version>${releasePluginVersion}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-resources-plugin</artifactId>
+          <version>${resourcesPluginVersion}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>sql-maven-plugin</artifactId>
+          <version>${sqlPluginVersion}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-site-plugin</artifactId>
+          <version>${sitePluginVersion}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>${surefirePluginVersion}</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -400,9 +551,8 @@
         </configuration>
       </plugin>
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>failsafe-maven-plugin</artifactId>
-        <version>2.4.3-alpha-1</version>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
         <configuration>
           <encoding>UTF-8</encoding>
           <systemProperties>
@@ -459,7 +609,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
-        <version>2.0-beta-9</version>
         <configuration>
           <goals>javadoc:javadoc site changes:announcement-generate assembly:assembly javadoc:jar source:jar deploy</goals>
         </configuration>
@@ -475,6 +624,7 @@
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
         <configuration>
           <descriptors>
@@ -485,7 +635,6 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>sql-maven-plugin</artifactId>
-        <version>1.3</version>
         <configuration>
           <driver>${dbunit.profile.driverClass}</driver>
           <url>${dbunit.profile.url}</url>
@@ -554,7 +703,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
-        <version>${enforcerPluginVersion}</version>
         <executions>
           <execution>
             <id>enforce-versions</id>
@@ -586,10 +734,12 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jxr-plugin</artifactId>
+        <version>${jxrPluginVersion}</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-report-plugin</artifactId>
+        <version>${surefirePluginVersion}</version>
         <reportSets>
           <reportSet>
             <id>tests</id>
@@ -620,6 +770,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-project-info-reports-plugin</artifactId>
+        <version>${projectInfoReportsPluginVersion}</version>
       </plugin>
       <!--
         <plugin> <groupId>org.codehaus.mojo</groupId>
@@ -628,6 +779,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
+        <version>${checkstylePluginVersion}</version>
         <configuration>
           <configLocation>${basedir}/checkstyle.xml</configLocation>
           <argLine>-Xmx512m -Xms128m</argLine>
@@ -636,6 +788,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-pmd-plugin</artifactId>
+        <version>${pmdPluginVersion}</version>
         <configuration>
           <linkXref>true</linkXref>
           <sourceEncoding>utf-8</sourceEncoding>
@@ -646,10 +799,12 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>jdepend-maven-plugin</artifactId>
+        <version>${jdependPluginVersion}</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
+        <version>${javadocPluginVersion}</version>
         <configuration>
           <quiet>true</quiet>
           <stylesheet>maven</stylesheet>
